Fixed page spacing on about me page

--- a/iiCt/src/app/about-me/about-me.component.css
+++ b/iiCt/src/app/about-me/about-me.component.css
@@ -50,6 +50,10 @@ hr {
   margin-top: 10px;
 }
 
+h5 {
+  padding-bottom: 1rem;
+}
+
 .move-down {
   margin-top: 190px;
 }
